--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -108,7 +108,8 @@
 								{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
 								</div>
-								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card__subtext">Et pour n'importe quelle occasion.
+Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
 							</div>
 							<div class="app-card">
 								<span>
@@ -121,7 +122,8 @@
 								{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
 								</div>
-								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card__subtext">Et pour n'importe quelle occasion.
+Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
 							</div>
 
 							<div class="app-card">
@@ -135,7 +137,8 @@
 									src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="#" width="" height="200px">
 								{# <div class="menu"></div> #}
 								</div>
-								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card__subtext">Et pour n'importe quelle occasion.
+Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
 							</div>,
 
 						</div>
