template du dossier services + ajout des fonctions controller home

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -59,21 +59,21 @@
 					</div>
 					<div class="side-title">Services</div>
 					<div class="side-menu">
-						<a href="#">
+						<a href="{{ path('disposition') }}">
 
 
 							Mise à disposition
 						</a>
-						<a href="#">
+						<a href="{{ path('chauffeur') }}">
 
 							Chauffeur Privée
 						</a>
-						<a href="#">
+						<a href="{{ path('visite') }}">
 
 							Visite des chateaux
 						</a>
-						<a href="#">+8 personnes</a>
-						<a href="#">Aéroports & Gares</a>
+						<a href="{{ path('personne') }}">+8 personnes</a>
+						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>
 					</div>
 				</div>
 				<div class="side-wrapper">
