--- a/templates/navleft/services/visite.html.twig
+++ b/templates/navleft/services/visite.html.twig
@@ -59,21 +59,21 @@
 					</div>
 					<div class="side-title">Services</div>
 					<div class="side-menu">
-							<a href="{{ path('disposition') }}">
+						<a href="#">
 
 
 							Mise à disposition
 						</a>
-						<a href="{{ path('chauffeur') }}">
+						<a href="#">
 
 							Chauffeur Privée
 						</a>
-						<a href="{{ path('visite') }}">
+						<a href="#">
 
 							Visite des chateaux
 						</a>
-						<a href="{{ path('personne') }}">+8 personnes</a>
-						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>>
+						<a href="#">+8 personnes</a>
+						<a href="#">Aéroports & Gares</a>
 					</div>
 				</div>
 				<div class="side-wrapper">
@@ -91,7 +91,7 @@
 
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-						<h1 class="text-center container  ">Nos IZyCars | Véhicules
+						<h1 class="text-center container  ">Entreprise Izy Drive
 						</h1>
 
 					</div>
@@ -100,47 +100,36 @@
 						<div class="apps-card">
 							<div class="app-card">
 								<span>
-									IZyCar de classe V
+									IZY DRIVE DANS VOTRE VILLE
 								</span>
-								{# <div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div> #}
-								<div class="app-card-buttons">
-									<img src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="car1" width="" height="200px">
-								{# <button class="content-button status-button">Update</button> #}
-									{# <div class="menu"></div> #}
-								</div>
-								<div class="app-card__subtext">Et pour n'importe quelle occasion.
-Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
-							</div>
-							<div class="app-card">
-								<span>
-									IZyCar de classe S
-								</span>
-								{# <div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
-																																</div> #}
-								<div class="app-card-buttons">
-									<img src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="car1" width="" height="200px">
-								{# <button class="content-button status-button">Update</button> #}
-									{# <div class="menu"></div> #}
-								</div>
-								<div class="app-card__subtext">Et pour n'importe quelle occasion.
-Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
-							</div>
-
-							<div class="app-card">
-								<span>
-									IZyCar Le Lixus Ls
-								</span>
-								<div
-									class="app-card-buttons">
+								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
 									{# <button class="content-button status-button">Update</button> #}
-									<img
-									src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="#" width="" height="200px">
-								{# <div class="menu"></div> #}
+									{# <div class="menu"></div> #}
 								</div>
-								<div class="app-card__subtext">Et pour n'importe quelle occasion.
-Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
-							</div>,
+							</div>
+							<div class="app-card">
+								<span>
+									IZY DRIVE DANS VOTRE VILLE
+								</span>
+								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+								</div>
+								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt=""> #}
+									{# <button class="content-button status-button">Update</button> #}
+									{# <div class="menu"></div> #}
+								</div>
+							</div>
 
+							<div class="app-card">
+								<span>
+									SERVICE AU KM
+								</span>
+								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
+									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
+									{# <div class="menu"></div> #}
+								</div>
+							</div>,
 						</div>
 					</div>
 
