--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -80,11 +80,11 @@
 				<div class="side-wrapper">
 					<div class="side-title">Légal</div>
 					<div class="side-menu">
-						<a href="#">
+					<a href="{{ path('mentionslegales') }}">
 							Mentions légals
 						</a>
-						<a href="#">Conditions générales</a>
-						<a href="#">A propos</a>
+						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
+						<a href="{{ path('apropos') }}">A propos</a>
 					</div>
 				</div>
 			</div>
