--- a/templates/navleft/legales/mentionslegales.html.twig
+++ b/templates/navleft/legales/mentionslegales.html.twig
@@ -59,7 +59,7 @@
 					</div>
 					<div class="side-title">Services</div>
 					<div class="side-menu">
-						<a href="{{ path('disposition') }}">
+							<a href="{{ path('disposition') }}">
 
 
 							Mise à disposition
@@ -73,7 +73,7 @@
 							Visite des chateaux
 						</a>
 						<a href="{{ path('personne') }}">+8 personnes</a>
-						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>
+						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>>
 					</div>
 				</div>
 				<div class="side-wrapper">
@@ -91,7 +91,7 @@
 
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-						<h1 class="text-center container  ">Services à disposition
+						<h1 class="text-center container  ">Nos IZyCars | Véhicules
 						</h1>
 
 					</div>
@@ -100,37 +100,47 @@
 						<div class="apps-card">
 							<div class="app-card">
 								<span>
-									Gestion des courses
+									IZyCar de classe V
 								</span>
-								<div class="app-card__subtext">Vous disposez d’une interface intuitive vous permettant de gérer vos réservations et demandes de devis, votre fichier client, votre planning et paramètres (tarifs, véhicule, etc..), d’éditer vos bons et factures.</div>
-								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
-									{# <button class="content-button status-button">Update</button> #}
+								{# <div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div> #}
+								<div class="app-card-buttons">
+									<img src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="car1" width="" height="200px">
+								{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
 								</div>
+								<div class="app-card__subtext">Et pour n'importe quelle occasion.
+Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
 							</div>
 							<div class="app-card">
 								<span>
-									Paiement (en cours)
+									IZyCar de classe S
 								</span>
-								<div class="app-card__subtext">Selon votre mode de fonctionnement, le client peut choisir et procéder au paiement soit auprès du chauffeur (à bord du véhicule) soit directement en ligne (par CB, PayPal ou autre moyen sécurisé).
-								</div>
-								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt=""> #}
-									{# <button class="content-button status-button">Update</button> #}
+								{# <div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+																																</div> #}
+								<div class="app-card-buttons">
+									<img src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="car1" width="" height="200px">
+								{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
 								</div>
+								<div class="app-card__subtext">Et pour n'importe quelle occasion.
+Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
 							</div>
 
 							<div class="app-card">
 								<span>
-									SERVICE AU KM
+									IZyCar Le Lixus Ls
 								</span>
-								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Strasbourg et Bordeaux mais aussi dans les gares, les conférences et pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. A bientôt !</div>
-								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
-									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
-									{# <div class="menu"></div> #}
+								<div
+									class="app-card-buttons">
+									{# <button class="content-button status-button">Update</button> #}
+									<img
+									src="https://chauffeur-vtc-belfort.fr/wp-content/uploads/2020/05/5359-1_thumb-600x330.png" alt="#" width="" height="200px">
+								{# <div class="menu"></div> #}
 								</div>
-							</div>
-							
+								<div class="app-card__subtext">Et pour n'importe quelle occasion.
+Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
+							</div>,
+
 						</div>
 					</div>
 
