MAJ JS header burger

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -94,7 +94,7 @@
 			</div>
 			<div class="main-container">
 			{# -----sous menu ---------- #}
-				{# <div class="main-header">
+				<div class="main-header menuOuvert">
 					<p class="menu-link-main">Isy Drive</p>
 					<div class="header-menu">
 						<a class="main-header-link" href="#">Accueil</a>
@@ -102,7 +102,7 @@
 						<a class="main-header-link" href="#">Mon profil</a>
 
 					</div>
-				</div> #}
+				</div>
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
 						<div class="content-wrapper-context">
