MAJ icon menu burger ouvert fermer

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -877,3 +877,8 @@ body.light-mode .video-bg:before {
 .menuOuvert{
   display: none;
 }
+
+.men .fa-times { display: block; }
+.men .fa-bars { display: none; }
+
+.fa-times { display: none; }
