--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -150,6 +150,6 @@ Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Français
 		<div class="overlay-app"></div>
 	</div>
 
-
+{# daouda #}
 {% endblock %}
 {% block footer %}{% endblock %}
