--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -60,31 +60,31 @@
 					</div>
 					<div class="side-title">Services</div>
 					<div class="side-menu">
-						<a href="#">
+							<a href="{{ path('disposition') }}">
 
 
 							Mise à disposition
 						</a>
-						<a href="#">
+						<a href="{{ path('chauffeur') }}">
 
 							Chauffeur Privée
 						</a>
-						<a href="#">
+						<a href="{{ path('visite') }}">
 
 							Visite des chateaux
 						</a>
-						<a href="#">+8 personnes</a>
-						<a href="#">Aéroports & Gares</a>
+						<a href="{{ path('personne') }}">+8 personnes</a>
+						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>>
 					</div>
 				</div>
 				<div class="side-wrapper">
 					<div class="side-title">Légal</div>
 					<div class="side-menu">
-						<a href="#">
+					<a href="{{ path('mentionslegales') }}">
 							Mentions légals
 						</a>
-						<a href="#">Conditions générales</a>
-						<a href="#">A propos</a>
+						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
+						<a href="{{ path('apropos') }}">A propos</a>
 					</div>
 				</div>
 			</div>
