Revert "MAJ code couleur card principal"
This reverts commit 6e32fa6d9129cf46a98d58789459430b16045756.

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -421,19 +421,19 @@ body.light-mode .video-bg:before {
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png"),
    linear-gradient(
     to right top,
-    #ce4af350,
-    #e73bd654,
-    #f631bb5d,
-    #fd31a150,
-    #ff3a8c52,
-    #ff4b7852,
-    #ff5e696c,
-    #ff6f5c5d,
-    #ff8b5167,
-    #ffaa4949,
-    #ffc8484f,
-    #ffe5525b
-   );//ici ce trouve les codes couleur de la card principal du main 
+    #cf4af3,
+    #e73bd7,
+    #f631bc,
+    #fd31a2,
+    #ff3a8b,
+    #ff4b78,
+    #ff5e68,
+    #ff705c,
+    #ff8c51,
+    #ffaa49,
+    #ffc848,
+    #ffe652
+   );
   border-radius: 14px;
   padding: 20px 40px;
   @media screen and (max-width: 415px) {
