--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -1,24 +1,17 @@
-	<div class="video-bg">
-		<video width="320" height="240" autoplay loop muted>
-			<source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
-			Your browser does not support the video tag.
-		</video>
-	</div>
-	<div class="dark-light">
-		<svg viewbox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-			<path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg>
-	</div>
-	<div class="app">
 		<div class="header">
 			<div class="menu-circle"></div>
+			<a class="menuSelector mob text-white">
+				<i class="fas fa-bars"></i>
+				<i class="fas fa-times"></i>
+			</a>
 			<div class="header-menu">
-				<a class="menu-link is-active" href="{{path('home_page')}}">Accueil</a>
-				<a class="menu-link notify" href="{{path('app_order_new')}}">Commander une course</a>
-				<a class="menu-link" href="{{path('app_contact')}}">Contact</a>
-				<a class="menu-link notify" href="{{path('show_user')}}">Mon profil</a>
-				<a class="menu-link notify" href="{{path('show_order')}}">Mes commandes</a>
+				<a class="menu-link is-active desk" href="{{path('home_page')}}">Accueil</a>
+				<a class="menu-link notify desk" href="{{path('app_order_new')}}">Commander une course</a>
+				<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
+				<a class="menu-link notify desk" href="{{path('show_user')}}">Mon profil</a>
+				<a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a>
 				{# <a class="menu-link notify" href="{{path('templates/APIMETO/index.php')}}">Météo</a> #}
-				
+
 			</div>
 
 			<div class="header-profile">
