+MAJ Mon histoire par Notre Histoire

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,7 +24,7 @@
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
 							<a href="{{ path('histoire') }}">
-								Mon histoire...
+								Notre histoire
 							</a>
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
@@ -84,7 +84,7 @@
 								Chauffeur privé
 							</h3>
 							<div class="content-text">Riche d’une expérience de conduite de 20 années, votre chauffeur maitrise 5 langues : anglais, français, espagnol, portugais et brésilien. Diplômé, il est titulaire du N° de licence.</div>
-							<button class="content-button">Contactez</button>
+							<button class="content-button bg-white  bold"><a class="bg-white text-success text-decoration-none"  href="{{path('app_contact')}}">Contactez</a></button>
 						</div>
 						<img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
 					</div>
@@ -198,40 +198,36 @@
 					<div class="content-section">
 						<div class="content-section-title"></div>
 						<div class="apps-card">
-							<div class="app-card">
+	<div class="app-card">
 								<span>
-									CONCIERGERIE
+									IZY DRIVE DANS VOTRE VILLE
 								</span>
-								<div class="app-card__subtext">VTC Ricardo Excellence, votre chauffeur privé à Toulouse, vous présente différentes prestations de conciergerie. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins.</div>
-								<div class="app-card-buttons">
-									<img
-									src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt="">
+								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
 									{# <button class="content-button status-button">Update</button> #}
-									<div class="menu"></div>
+									{# <div class="menu"></div> #}
 								</div>
 							</div>
 							<div class="app-card">
 								<span>
-									MISE A DISPOSITION
+									IZY DRIVE DANS VOTRE VILLE
 								</span>
-								<div class="app-card__subtext">Vous souhaitez vous déplacer librement et profiter d’un service de transport haut de gamme à Toulouse? VTC Ricardo Excellence vous propose de louer un véhicule avec ou sans chauffeur.</div>
-								<div class="app-card-buttons">
-									<img
-									src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#">
+								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+								</div>
+								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt=""> #}
 									{# <button class="content-button status-button">Update</button> #}
-									<div class="menu"></div>
+									{# <div class="menu"></div> #}
 								</div>
 							</div>
+
 							<div class="app-card">
 								<span>
 									SERVICE AU KM
 								</span>
-								<div class="app-card__subtext">Votre VTC propose ses services pour les professionnels. Que vous ayez besoin de vous rendre à un rendez-vous, à l'aéroport ou à une réunion, VTC Ricardo Excellence vous assure la ponctualité.</div>
-								<div
-									class="app-card-buttons">
-									{# <button class="content-button status-button">Update</button> #}
-									<img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#">
-									<div class="menu"></div>
+								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
+									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
+									{# <div class="menu"></div> #}
 								</div>
 							</div>
 						</div>
