--- a/templates/navleft/services/disposition.html.twig
+++ b/templates/navleft/services/disposition.html.twig
@@ -46,7 +46,7 @@
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
 							<a href="{{ path('histoire') }}">
-								Mon histoire...
+								Notre histoire
 							</a>
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
