--- a/templates/navleft/legales/mentionslegales.html.twig
+++ b/templates/navleft/legales/mentionslegales.html.twig
@@ -46,7 +46,7 @@
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
 							<a href="{{ path('histoire') }}">
-								Mon histoire...
+								Notre histoire
 							</a>
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
@@ -139,7 +139,7 @@ Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Français
 								</div>
 								<div class="app-card__subtext">Et pour n'importe quelle occasion.
 Qu’il s’agisse d’un transfert vers les stations de ski des Alpes Françaises, vers les aéroports internationales de la région ou vers des villes du territoire comme Grenoble, Chambéry, Annecy ou Genève, Nikolas et notre équipe sont à votre disposition pour que vous soyez le plus satisfait.</div>
-							</div>,
+							</div>
 
 						</div>
 					</div>
