--- a/templates/navleft/services/chauffeur.html.twig
+++ b/templates/navleft/services/chauffeur.html.twig
@@ -46,7 +46,7 @@
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
 							<a href="{{ path('histoire') }}">
-								Mon histoire...
+								Notre histoire
 							</a>
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
@@ -129,7 +129,7 @@
 									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
 									{# <div class="menu"></div> #}
 								</div>
-							</div>,
+							</div>
 						</div>
 					</div>
 
