--- a/templates/order/new.html.twig
+++ b/templates/order/new.html.twig
@@ -25,7 +25,7 @@
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
 							<a href="{{ path('histoire') }}">
-								Mon histoire...
+								Notre histoire
 							</a>
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
