--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -1,3 +1,5 @@
+{# -----header desktop----- #}
+
 		<div class="header">
 			<div class="menu-circle"></div>
 			<a class="menuSelector mob text-white">
@@ -8,8 +10,10 @@
 				<a class="menu-link is-active desk" href="{{path('home_page')}}">Accueil</a>
 				<a class="menu-link notify desk" href="{{path('app_order_new')}}">Commander une course</a>
 				<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
-				<a class="menu-link notify desk" href="{{path('show_user')}}">Mon profil</a>
+				
 				<a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a>
+				<a class="menu-link notify desk" href="{{path('show_user')}}">Connexion</a>
+					<a class="menu-link notify desk" href="{{path('app_register')}}">Inscription</a>
 				{# <a class="menu-link notify" href="{{path('templates/APIMETO/index.php')}}">Météo</a> #}
 
 			</div>
