--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -15,104 +15,60 @@
 		<svg viewbox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg>
 	</div>
+	{# ----header desktop--- #}
 	<div class="app">
 		{% include "partials/header1.html.twig" %}
+		{# ----navbar left--- #}
 		<div class="wrapper">
 			<div class="left-side">
-				<div class="side-wrapper">
-					<div class="side-wrapper">
-						<div class="side-title">Présentation</div>
-						<div class="side-menu">
-							<a href="{{ path('histoire') }}">
-								Notre histoire
-							</a>
-							<a href="{{ path('vehicules') }}">
-								Mes véhicules
-							</a>
-							<a href="{{ path('avis') }}">
-								Vos avis
-							</a>
-
-						</div>
-					</div>
-					<div class="side-title">Services</div>
-					<div class="side-menu">
-						<a href="{{ path('disposition') }}">
-
-
-							Mise à disposition
-						</a>
-						<a href="{{ path('chauffeur') }}">
-
-							Chauffeur Privée
-						</a>
-						<a href="{{ path('visite') }}">
-
-							Visite des chateaux
-						</a>
-						<a href="{{ path('personne') }}">+8 personnes</a>
-						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>
-					</div>
-				</div>
-				<div class="side-wrapper">
-					<div class="side-title">Légal</div>
-					<div class="side-menu">
-						<a href="{{ path('mentionslegales') }}">
-							Mentions légals
-						</a>
-						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
-						<a href="{{ path('apropos') }}">A propos</a>
-					</div>
-				</div>
+				{% include "partials/navleft.html.twig" %}
 			</div>
+			{# -----header mobile---------- #}
 			<div class="main-container">
-
+				{% include "partials/headermobile.html.twig" %}
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-						
-
-							
-								<div class="col-md-7 mb-5 my-5">
-								<h3>Formulaire de contact</h3>
-
-									{{ form_start(form)}}
 
 
+						<div class="col-md-7 mb-5 my-5">
+							<h3>Formulaire de contact</h3>
+
+							{{ form_start(form)}}
 
 
-									<div class="row form-group">
+							<div class="row form-group">
 
-										<div class="col-md-12">
-											{{form_row(form.firstName, {'attr':{ 'class': 'form-control'}})}}
-										</div>
-										<div class="col-md-12">
-											{{form_row(form.lastName, {'attr':{ 'class': 'form-control'}})}}
-										</div>
-										<div class="col-md-12">
-											{{form_row(form.email, {'attr':{ 'class': 'form-control'}})}}
-										</div>
-									</div>
-									<div class="row form-group">
+								<div class="col-md-12">
+									{{form_row(form.firstName, {'attr':{ 'class': 'form-control'}})}}
+								</div>
+								<div class="col-md-12">
+									{{form_row(form.lastName, {'attr':{ 'class': 'form-control'}})}}
+								</div>
+								<div class="col-md-12">
+									{{form_row(form.email, {'attr':{ 'class': 'form-control'}})}}
+								</div>
+							</div>
+							<div class="row form-group">
 
-										<div class="col-md-12">
-											{{form_row(form.message, {'attr':{ 'class': 'form-control'}})}}
-										</div>
-									</div>
+								<div class="col-md-12">
+									{{form_row(form.message, {'attr':{ 'class': 'form-control'}})}}
+								</div>
+							</div>
 
-									<div class="row form-group">
+							<div class="row form-group">
 
-										<div class="col-md-12">
-											<input type="submit" class="btn btn-primary btn-block" value="Envoyer">
-
-										</div>
-									</div>
-
-
-									{{ form_end(form)}}
+								<div class="col-md-12">
+									<input type="submit" class="btn btn-primary btn-block" value="Envoyer">
 
 								</div>
-							
-						
+							</div>
+
+
+							{{ form_end(form)}}
+
+						</div>
+
+
 						{# <img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt=""> #}
 					</div>
 
@@ -128,69 +84,69 @@
 
 
 	{# <div class="container my-5">
-					<div class="row my-5">
-						<div class="col-md-7 mb-5 my-5">
-		
-							{{ form_start(form)}}
-		
-		
-							<div class="row form-group">
-								<div class="col-md-6 mb-3 mb-md-0">
-		                            {{form_row(form.firstName, {'attr':{ 'class': 'form-control'}})}}
-		                        </div>
-								<div class="col-md-6">
-		                         {{form_row(form.lastName, {'attr':{ 'class': 'form-control'}})}}
-		                        
-		                        </div>
+						<div class="row my-5">
+							<div class="col-md-7 mb-5 my-5">
+			
+								{{ form_start(form)}}
+			
+			
+								<div class="row form-group">
+									<div class="col-md-6 mb-3 mb-md-0">
+			                            {{form_row(form.firstName, {'attr':{ 'class': 'form-control'}})}}
+			                        </div>
+									<div class="col-md-6">
+			                         {{form_row(form.lastName, {'attr':{ 'class': 'form-control'}})}}
+			                        
+			                        </div>
+								</div>
+			
+								<div class="row form-group">
+			
+									<div class="col-md-12">
+			                         {{form_row(form.email, {'attr':{ 'class': 'form-control'}})}}
+			                        </div>
+								</div>
+			                    	<div class="row form-group">
+			
+									<div class="col-md-12">
+			                         {{form_row(form.message, {'attr':{ 'class': 'form-control'}})}}
+			                        </div>
+								</div>
+			
+								<div class="row form-group">
+			
+									<div class="col-md-12">
+			                        <input type="submit" class="btn btn-primary btn-block" value="Envoyer">
+			                        
+			                        </div>
+								</div>
+			
+								
+			
+								{{ form_end(form)}}
+			
 							</div>
-		
-							<div class="row form-group">
-		
-								<div class="col-md-12">
-		                         {{form_row(form.email, {'attr':{ 'class': 'form-control'}})}}
-		                        </div>
+							<div class="col-md-5 my-5 bg-dark border  text-center text-white">
+			
+								<div class="p-4 mb-3  my-5">
+									<p class="mb-0 font-weight-bold">Addresse</p>
+									<p class="mb-4">{{ contact_adress }}</p>
+			
+									<p class="mb-0 font-weight-bold">Phone</p>
+									<p class="mb-4">
+										<a href="#">{{ contact_phone }}</a>
+									</p>
+			
+									<p class="mb-0 font-weight-bold">Addresse email</p>
+									<p class="mb-0">
+										<a href="#">{{ contact_email }}</a>
+									</p>
+			
+								</div>
+			
 							</div>
-		                    	<div class="row form-group">
-		
-								<div class="col-md-12">
-		                         {{form_row(form.message, {'attr':{ 'class': 'form-control'}})}}
-		                        </div>
-							</div>
-		
-							<div class="row form-group">
-		
-								<div class="col-md-12">
-		                        <input type="submit" class="btn btn-primary btn-block" value="Envoyer">
-		                        
-		                        </div>
-							</div>
-		
-							
-		
-							{{ form_end(form)}}
-		
 						</div>
-						<div class="col-md-5 my-5 bg-dark border  text-center text-white">
-		
-							<div class="p-4 mb-3  my-5">
-								<p class="mb-0 font-weight-bold">Addresse</p>
-								<p class="mb-4">{{ contact_adress }}</p>
-		
-								<p class="mb-0 font-weight-bold">Phone</p>
-								<p class="mb-4">
-									<a href="#">{{ contact_phone }}</a>
-								</p>
-		
-								<p class="mb-0 font-weight-bold">Addresse email</p>
-								<p class="mb-0">
-									<a href="#">{{ contact_email }}</a>
-								</p>
-		
-							</div>
-		
-						</div>
-					</div>
-				</div> #}
+					</div> #}
 
 {% endblock %}
 {% block footer %}{% endblock %}
