--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,69 +14,22 @@
 		<svg viewbox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg>
 	</div>
+
+	{# ----header desktop--- #}
 	<div class="app">
 		{% include "partials/header1.html.twig" %}
-
+	{# ----navbar left--- #}
 		<div class="wrapper">
 			<div class="left-side">
 				<div class="side-wrapper">
-					<div class="side-wrapper">
-						<div class="side-title">Présentation</div>
-						<div class="side-menu">
-							<a href="{{ path('histoire') }}">
-								Notre histoire
-							</a>
-							<a href="{{ path('vehicules') }}">
-								Mes véhicules
-							</a>
-							<a href="{{ path('avis') }}">
-								Vos avis
-							</a>
-
-						</div>
-					</div>
-					<div class="side-title">Services</div>
-					<div class="side-menu">
-						<a href="{{ path('disposition') }}">
-
-
-							Mise à disposition
-						</a>
-						<a href="{{ path('chauffeur') }}">
-
-							Chauffeur Privée
-						</a>
-						<a href="{{ path('visite') }}">
-
-							Visite des chateaux
-						</a>
-						<a href="{{ path('personne') }}">+8 personnes</a>
-						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>
-					</div>
-				</div>
-				<div class="side-wrapper">
-					<div class="side-title">Légal</div>
-					<div class="side-menu">
-						<a href="{{path('mentionslegales')}}">
-							Mentions légals
-						</a>
-						<a href="{{path('conditionsgenerales')}}">Conditions générales</a>
-						<a href="{{path('apropos')}}">A propos</a>
-					</div>
+					{% include "partials/navleft.html.twig" %}
 				</div>
 			</div>
-			<div
-				class="main-container">
-				{# -----sous menu ---------- #}
-				<div class="main-header menuOuvert">
-					<p class="menu-link-main">Isy Drive</p>
-					<div class="header-menu">
-						<a class="main-header-link" href="#">Accueil</a>
-						<a class="main-header-link is-active" href="#">Mes commandes</a>
-						<a class="main-header-link" href="#">Mon profil</a>
+			
+	{# -----header mobile ---------- #}
+			<div class="main-container">
+				{% include "partials/headermobile.html.twig" %}
 
-					</div>
-				</div>
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
 						<div class="content-wrapper-context">
