--- a/templates/registration/register.html copy.twig
+++ b/templates/registration/register.html copy.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Page inscription des utilisateurs
 {% endblock %}
 
 {% block body %}
-	{# ----header desktop--- #}
+	<br><br>
+			{# ----header desktop--- #}
 	<div class="app">
 		{% include "partials/header1.html.twig" %}
-	
 		<div class="wrapper">
 			<div class="left-side">
 
@@ -20,11 +20,9 @@
 			{# -----header mobile---------- #}
 			<div class="main-container">
 				{% include "partials/headermobile.html.twig" %}
-			</div>
-				
+
 				{# ----formulaire --- #}
-				
-				<div class="container my-5 w-75 bg-dark border text-center text-white">
+				<div class="container my-5 w-25 bg-dark border  text-center text-white ">
 					<h1 class="container my-5 ">Inscrivez-vous !
 					</h1>
 					{{ form_start(registrationForm) }}
@@ -34,14 +32,14 @@
 					{{ form_row(registrationForm.email,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.adresse,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.age,  {'attr':{'class':'form form-control'}}) }}
+					{{ form_row(registrationForm.plainPassword,   {'attr':{'class':'form form-control'}})
+													        }}
 
-					<button type="submit" class="btn btn-success btn-block">S'inscrire</button>
+					<button type="submit" class="btn btn-success btn-block p-2 my-5">S'inscrire</button>
 					{{ form_end(registrationForm) }}
 				</div>
+			</div>
 		</div>
 	</div>
-
-
-			
-		{% endblock %}
-
+	{#  #}
+{% endblock %}
