--- a/templates/partials/navleft.html.twig
+++ b/templates/partials/navleft.html.twig
@@ -41,6 +41,7 @@
 						</a>
 						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
 						<a href="{{ path('apropos') }}">A propos</a>
+						<a href="{{ path('nouscontacter') }}">Nous contacter </a>
 					</div>
 				</div>
 		
